Fix spelling mistake

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p class='pl-3 h3 paragraph text-white' id="bone-item"></p>
         </div>
         <div class='row pb-5'>
-            <p class='h3 paragraph text-white col-sm-4 text-right'>Oujia Board Found:</p>
+            <p class='h3 paragraph text-white col-sm-4 text-right'>Ouija Board Found:</p>
             <p class='pl-3 h3 paragraph text-white' id="oujia-item"></p>
         </div>
         <div class='row pb-3'>
