--- a/index.html
+++ b/index.html
@@ -9,43 +9,48 @@
 </head>
 
 <body onload="init()" class='bg-grad'>
-    <div class="container-fluid">
+    <div class='container-fluid'>
         <p class='display-1 text-center title text-white pb-5 pt-3'>Phasmo Challenge Generator</p>
-        <div class='row pb-3'>
-            <p class='h3 paragraph text-white col-sm-4 text-right'>Bone Found:</p>
-            <p class='pl-3 h3 paragraph text-white' id="bone-item"></p>
-        </div>
-        <div class='row pb-5'>
-            <p class='h3 paragraph text-white col-sm-4 text-right'>Ouija Board Found:</p>
-            <p class='pl-3 h3 paragraph text-white' id="oujia-item"></p>
-        </div>
-        <div class='row pb-3'>
-            <p class='h3 paragraph text-white col-sm-4 text-right'>1st Evidence:</p>
-            <p class='pl-3 h3 paragraph text-white col-sm-2' id="first-ev-item"></p>
-        </div>
-        <div class='row pb-3'>
-            <p class='h3 paragraph text-white col-sm-4 text-right'>2nd Evidence:</p>
-            <p class='pl-3 h3 paragraph text-white' id="second-ev-item"></p>
-        </div>
-        <div class='row pb-5'>
-            <p class='h3 paragraph text-white col-sm-4 text-right'>3rd Evidence:</p>
-            <p class='pl-3 h3 paragraph text-white' id="third-ev-item"></p>
-        </div>
-        <div class='row pb-3'>
-            <p class='h3 paragraph text-white col-sm-4 text-right'>2nd Objective:</p>
-            <p class='pl-3 h3 paragraph text-white' id="second-ob-item"></p>
-        </div>
-        <div class='row pb-3'>
-            <p class='h3 paragraph text-white col-sm-4 text-right'>3rd Objective:</p>
-            <p class='pl-3 h3 paragraph text-white' id="third-ob-item"></p>
-        </div>
-        <div class='row pb-5'>
-            <p class='h3 paragraph text-white col-sm-4 text-right'>4th Objective:</p>
-            <p class='pl-3 h3 paragraph text-white' id="fourth-ob-item"></p>
-        </div>
-        <div class='row pb-5'>
-            <p class='h5 paragraph text-white col-sm-4 text-right'>Free Items:</p>
-            <p class='pl-3 h5 paragraph text-white' id='free-items'></p>
+        <div class="row col-xs-12">
+            <div class='col-sm-7'>
+                <div class='row pb-3'>
+                    <p class='h3 paragraph text-white col-sm-6 text-right'>Bone Found:</p>
+                    <p class='pl-3 h3 paragraph text-white' id="bone-item"></p>
+                </div>
+                <div class='row pb-5'>
+                    <p class='h3 paragraph text-white col-sm-6 text-right'>Ouija Board Found:</p>
+                    <p class='pl-3 h3 paragraph text-white' id="oujia-item"></p>
+                </div>
+                <div class='row pb-3'>
+                    <p class='h3 paragraph text-white col-sm-6 text-right'>1st Evidence:</p>
+                    <p class='pl-3 h3 paragraph text-white' id="first-ev-item"></p>
+                </div>
+                <div class='row pb-3'>
+                    <p class='h3 paragraph text-white col-sm-6 text-right'>2nd Evidence:</p>
+                    <p class='pl-3 h3 paragraph text-white' id="second-ev-item"></p>
+                </div>
+                <div class='row pb-5'>
+                    <p class='h3 paragraph text-white col-sm-6 text-right'>3rd Evidence:</p>
+                    <p class='pl-3 h3 paragraph text-white' id="third-ev-item"></p>
+                </div>
+                <div class='row pb-3'>
+                    <p class='h3 paragraph text-white col-sm-6 text-right'>2nd Objective:</p>
+                    <p class='pl-3 h3 paragraph text-white' id="second-ob-item"></p>
+                </div>
+                <div class='row pb-3'>
+                    <p class='h3 paragraph text-white col-sm-6 text-right'>3rd Objective:</p>
+                    <p class='pl-3 h3 paragraph text-white' id="third-ob-item"></p>
+                </div>
+                <div class='row pb-5'>
+                    <p class='h3 paragraph text-white col-sm-6 text-right'>4th Objective:</p>
+                    <p class='pl-3 h3 paragraph text-white' id="fourth-ob-item"></p>
+                </div>
+            </div>
+            <div class='col-sm-5 mt-4'>
+                    <p class='pb-3 h3 paragraph text-white'>Free Items:</p>
+                    <p class='h5 paragraph text-white' id='free-items'></p>
+                </div>
+            </div>
         </div>
         <div class='row justify-content-center'>
             <button class='btn btn-primary btn-light col-sm-1 btn-block title mr-5' onclick="generate()">Generate</button>
